<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="InconsistentArrays">
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="attention">Attention</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="loginFormTitle">Provide your user details for the MyEpisodes.com website below.</string>
    <string name="loginFormRegister">New user?</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginLoginBtn">Login</string>
    <string name="loginStartLogin">Logging in to MyEpisodes.com</string>
    <string name="loginSuccessfullLogin">Successfully logged in</string>
    <string name="loginLoginFailed">Username or password incorrect, please try again!</string>
    <string name="registerFormTitle">Register here, fill in all your user details and click on register.</string>
    <string name="registerUsernameHint">Username</string>
    <string name="registerPasswordHint">Password</string>
    <string name="registerEmailHint">Email</string>
    <string name="registerBtn">Register</string>
    <string name="registerStart">Creating user for MyEpisodes.com</string>
    <string name="registerSuccessfull">Successfully created user!</string>
    <string name="registerFailed">Username already exists, please choose another username.</string>
    <string name="newWatch">New Watch</string>
    <string name="newWatchhome">New Watch (%d)</string>
    <string name="watch">Watch</string>
    <string name="watchhome">Watch (%d)</string>
    <string name="newAcquire">New Acquire</string>
    <string name="newAcquirehome">Acquire (%d)</string>
    <string name="acquire">Acquire</string>
    <string name="acquirehome">Acquire (%d)</string>
    <string name="coming">Coming</string>
    <string name="cominghome">Coming (%d)</string>
    <string name="newCominghome">New Coming (%d)</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="watchListTitle">List of shows/episodes</string>
    <string name="watchListSubTitleWatch" tools:ignore="PluralsCandidate">%d episode to watch</string>
    <string name="watchListSubTitleAcquire" tools:ignore="PluralsCandidate">%d episode to acquire</string>
    <string name="watchListSubTitleComing" tools:ignore="PluralsCandidate">%d future episode</string>
    <string name="watchListSubTitleWatchPlural" tools:ignore="PluralsCandidate">%d episodes to watch</string>
    <string name="watchListSubTitleAcquirePlural" tools:ignore="PluralsCandidate">%d episodes to acquire</string>
    <string name="watchListSubTitleComingPlural" tools:ignore="PluralsCandidate">%d future episodes</string>
    <string name="watchListEmpty">No episodes found.</string>
    <string name="watchListFull">Reached the limit of 200 episodes, consider enabling 200+ episodes in settings.</string>
    <string name="show_menu_overflow">More options</string>
    <string name="norating">n/a</string>
    <string name="list_empty">You can add shows to this list</string>
    <string name="details">Details</string>
    <string name="action_watched">Mark Watched</string>
    <string name="episodeDetailsSeasonLabel">Season: </string>
    <string name="episodeDetailsEpisodeLabel">Episode: </string>
    <string name="episodeDetailsAirDateLabel">Airdate: </string>
    <string name="episodeRuntimeLabel">Runtime: </string>
    <string name="episodeDetailsAirDateLabelDateNotFound">Unsupported date format!</string>
    <string name="TweetTitle">Share</string>
    <string name="Tweet">I have watched \'%s\' #MyEpisodesManager #Android</string>
    <string name="randompickertext">The random episode picker recommends you watch: </string>
    <string name="CoverArtFromShow">Show cover art image</string>
    <string name="addShow">Add Show</string>
    <string name="ShowRuntime">Show Runtime</string>
    <string name="favouriteShows">Favourite Shows</string>
    <string name="ignoredShows">Ignored Shows</string>
    <string name="showSearchHint">Enter a show name&#8230;</string>
    <string name="showSearchNoSearchResults">No shows found</string>
    <string name="showSearchOneFound">show found</string>
    <string name="showSearchMoreFound">shows found</string>
    <string name="showSearchAddShow">Are you sure you want to add this show to your list of shows?</string>
    <string name="showSearchFinished">Are you done adding shows or do you want to continue?</string>
    <string name="runTimeEditMessage">Please update the runtime (mins) below if incorrect:</string>
    <string name="nullRuntimeCorrection">Null Runtime Correction</string>
    <string name="showStats">Show Stats</string>
    <string name="showWebsites">Show Websites</string>
    <string name="showSummary">Show summary:</string>
    <string name="episodesSummary">Episodes Summary</string>
    <string name="episodesToWatch">Episodes to watch: </string>
    <string name="episodesToAcquire">Episodes to acquire: </string>
    <string name="episodesComing">Episodes coming: </string>
    <string name="seasonProgress">Season Progress</string>
    <string name="calendar">Calendar</string>
    <string name="calendarTitle">Episode Calendar</string>
    <string name="noEpisodesOnDate">No episodes on this date</string>
    <string name="calendarLegend">● %1$s  ● %2$s  ● %3$s</string>
    <string name="watchLabel">Watch</string>
    <string name="acquireLabel">Acquire</string>
    <string name="comingLabel">Coming</string>
    <string name="today">Today</string>
    <string name="selectMonthYear">Select Month and Year</string>
    <string name="daySunShort">Sun</string>
    <string name="dayMonShort">Mon</string>
    <string name="dayTueShort">Tue</string>
    <string name="dayWedShort">Wed</string>
    <string name="dayThuShort">Thu</string>
    <string name="dayFriShort">Fri</string>
    <string name="daySatShort">Sat</string>
    <string name="favoIgnoredDeleteShow">Delete show</string>
    <string name="favoIgnoredIgnoreShow">Ignore show</string>
    <string name="favoIgnoredUnignoreShow">Unignore show</string>
    <string name="favoIgnoredConfirmationDeleteMessage">Are you sure you want to delete this show?</string>
    <string name="favoIgnoredConfirmationIgnoreMessage">Are you sure you want to ignore this show?</string>
    <string name="favoIgnoredConfirmationUnignoreMessage">Are you sure you want to unignore this show?</string>
    <string name="randompicker">Random Episode</string>
    <string name="randompickershort">Random Episode</string>
    <string name="randompickerBar">Random</string>
    <string name="filterUnder15">&lt;15m</string>
    <string name="filterUnder30">&lt;30m</string>
    <string name="filterUnder45">&lt;45m</string>
    <string name="filterUnder60">&lt;60m</string>
    <string name="filterOver60">&gt;60m</string>
    <string name="progressLoadingTitle">Loading&#8230;</string>
    <string name="progressLoadingTitleCache" tools:ignore="MissingTranslation">Loading from cache&#8230;</string>
    <string name="progressLoadingBody">Sending/Retrieving data</string>
    <string name="progressLoadingOnlineCheck">Checking if user is online</string>
    <string name="aboutTitle">About&#8230;</string>
    <string name="aboutVersion">Version:</string>
    <string name="aboutVersionNumber">""</string>
    <string name="aboutLicense">License:</string>
    <string name="aboutWebsite">Website:</string>
    <string name="aboutEmail">Email:</string>
    <string name="aboutOriginalIdea">Original idea:</string>
    <string name="aboutProgrammer">Programmed by:</string>
    <string name="whatsNewTitle">What\'s new</string>
    <string name="whatsNewVersion">Version:</string>
    <string name="whatsNewText">What has changed:</string>
    <string name="whatsNewValuesString">
          \u25CF Disable Acquire / Coming  \n
         \u25CF Sort options  \n
         \u25CF Code refactoring \n
         \u25CF Enabled 200+ episodes \n
         \u25CF Show runtime added \n
         \u25CF Ability to update/edit show runtime \n
         \u25CF Show summary and image added to episode details and random episode \n
         \u25CF Updated all web code \n
         \u25CF Moved to Material Design theme from Halo \n
         \u25CF Updated icons to Material Icons \n
         \u25CF Created a show landing page to see show detail, and watch, acquire and coming episodes
    </string>
    <string name="refresh">Refresh</string>
    <string name="collapse">Collapse</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="whatsNew">What\'s new</string>
    <string name="menuEpisodeMarkAcquired">Mark Acquired</string>
    <string name="menuEpisodeMarkWatched">Mark Watched</string>
    <string name="showPreferences">Shows</string>
    <string name="orderPreferences">Order</string>
    <string name="filterPreferences">Website Filters</string>
    <string name="disablePreferences">Disable</string>
    <string name="showWatchOrderPrompt">Order of shows to watch</string>
    <string name="showAcquireOrderPrompt">Order of shows to acquire</string>
    <string name="showComingOrderPrompt">Order of coming shows</string>
    <string name="showRuntimeOrderPrompt">Order of show runtime</string>
    <string name="episodeOrderPrompt">Order of episodes</string>
    <string name="episodeOrderPromptExtra">Oldest or newest first&#8230;</string>
    <string name="daysBackwardEnable">Enable 200+ episodes</string>
    <string name="daysBackwardCP">Days Backward</string>
    <string name="daysBackwardCPExtra">Number of days backward to search for new episodes to watch</string>
    <string name="RunTime">Enable show runtime</string>
    <string name="listingUnacquired">List Unacquired Shows</string>
    <string name="listingUnwatched">List Unwatched Shows</string>
    <string name="listingIgnored">List Ignored Shows"</string>
    <string name="listingPilots">List Pilots Shows</string>
    <string name="listingLocalizedAirdates">List Localized Airdate Shows</string>
    <string name="CacheEpisodes">Cache Episodes</string>
    <string name="CacheEpisodesSummary">Cache episodes on the device to speed up load times</string>
    <string name="CacheFileAge">Age of Cache Files</string>
    <string name="CacheFileAgeSummary">Define how long to cache files on the device</string>
    <string name="openAcquirePrompt">Acquire Settings</string>
    <string name="openAcquirePromptExtra">Display all shows that need to be acquired or only shows from yesterday</string>
    <string name="ThemePrompt">Choose Theme</string>
    <string name="storePasswordPrompt">Store password</string>
    <string name="disableAcquire">Disable Acquire</string>
    <string name="disableAcquireSummary">Disable listing shows that need to be acquired</string>
    <string name="disableComing">Disable Coming</string>
    <string name="disableComingSummary">Disable shows that are coming</string>
    <string name="showLanguagePrompt">Change Language</string>
    <string name="aboutLicenseValue">GNU GPL V3 License</string>
    <string name="aboutOriginalIdeaValue">Dirk Vranckaert</string>
    <string name="aboutProgrammerValue">mentalinc\nIvo Janssen\nDirk Vranckaert</string>
    <string name="aboutWebsiteValue">https://github.com/mentalinc/my-episodes-watch-manager</string>
    <string name="aboutEmailValue">mentalinc@outlook.com</string>
    <string name="barShowDetail">Show Info</string>
    <string name="barEpisodeOverview">Episode Info</string>
    <string name="barAcquire">Acquire</string>
    <string name="barWatch">Watch</string>
    <string name="BarComing">Coming</string>
</resources>