<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/barHome"
        android:icon="@drawable/outline_home_white_48"
        android:title="@string/home"/>

    <item android:id="@+id/barWatch"
        android:icon="@drawable/outline_visibility_white_48"
        android:title="@string/barWatch"/>

    <item android:id="@+id/barAcquire"
        android:icon="@drawable/outline_upcoming_white_48"
        android:title="@string/barAcquire"/>

    <item android:id="@+id/barComing"
        android:icon="@drawable/outline_next_week_white_48"
        android:title="@string/BarComing"/>

<!---
    <item android:id="@+id/barRandom"
        android:icon="@drawable/outline_shuffle_white_48"
        android:title="@string/randompickerBar"></item>
    !-->

</menu>