<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/home"
        android:contentDescription="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_title_home"
        app:showAsAction="ifRoom|withText"
        android:title="@string/home"
        android:visible="true" />


    <item
        android:id="@+id/btn_title_collapse"
        android:enabled="true"
        android:icon="@drawable/ic_title_collapse"
        app:showAsAction="ifRoom|withText"
        android:title="@string/collapse"
        android:visible="true" />

    <item
        android:id="@+id/btn_title_refresh"
        android:enabled="true"
        android:icon="@drawable/ic_title_refresh"
        app:showAsAction="ifRoom|withText"
        android:title="@string/refresh"
        android:visible="true" />


</menu>