<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@id/home"
        android:contentDescription="@string/home"
        android:enabled="true"
        android:icon="@drawable/outline_home_white_36"
        android:title="@string/home"
        android:visible="true"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/markAsSeen"
        android:enabled="true"
        android:icon="@drawable/outline_done_white_24"
        app:showAsAction="always|withText"
        android:title="@string/menuEpisodeMarkWatched"
        android:visible="true" />
    <item
        android:id="@+id/markAsAquired"
        android:enabled="true"
        android:icon="@drawable/outline_upcoming_white_48"
        app:showAsAction="always|withText"
        android:title="@string/menuEpisodeMarkAcquired"
        android:visible="true" />

</menu>