<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new"
            style="@style/HomeButton"
            android:drawableTop="@drawable/outline_new_label_white_48"
            android:onClick="onTodoClick"
            android:text="@string/whatsNew" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            style="@style/HomeButton"
            android:drawableTop="@drawable/outline_info_white_48"
            android:onClick="onAboutClick"
            android:text="@string/about" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_more"
            style="@style/HomeButton"
            android:drawableTop="@drawable/outline_settings_white_48"
            android:onClick="onSettingsClick"
            android:text="@string/settings" />


        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                style="@style/HomeButton"
                android:drawableTop="@drawable/outline_logout_white_48"
                android:onClick="onLogoutClick"
                android:text="@string/logout"
            />

        /LinearLayout>
    </LinearLayout>
</LinearLayout>